brat/test/golden/error/kvarnotfound.brat.golden
Error in test/golden/error/kvarnotfound.brat on line 2:
f = { x => y }
           ^

  y not found in kernel context

